# MusicBank

./: .gitignore  README.md  pyproject.toml
Data/Grateful-Dead/: GD-Shows.sqlite
Data/Grateful-Dead/SAVE/: 1969.xml
Data/Grateful-Dead/Study/: 1966.txt  1968.txt  1969.txt  1970.txt  1972.txt  1974.txt  1975.txt  1976.txt  1977.txt  1981.txt  1982.txt  1984.txt  1985.txt  1986.txt  1987.txt  1991.txt  1992.txt  1994.txt
Data/Grateful-Dead/Txt/: 1967.txt  1971.txt  1975.txt  1977.txt  1978.txt  1979.txt  1980.txt  1981.txt  1988.txt  1989.txt  1990.txt  1992.txt  1993.txt
Data/Grateful-Dead/XML/: 1969.xml  1972.xml  1975.xml  1976.xml  1979.xml  1980.xml  1981.xml  1982.xml  1983.xml  1984.xml  1985.xml  1986.xml  1987.xml  1990.xml  1991.xml  1992.xml  1993.xml  1995.xml
Docs/: appendix.md  standards.md  tools.md
Study/: studyOne.py
Tools/: getTrackListing.py  loadGDInfo.py  makeBandDir.py  mkMusicBankTree.sh  setup.sh
data/Grateful-Dead/: GDjson.tgz  setlists.sql
data/Grateful-Dead/SAVE/: 1991.xml  1993.xml  1995.xml
data/Grateful-Dead/Study/: 1967.txt  1971.txt  1973.txt  1978.txt  1979.txt  1980.txt  1983.txt  1988.txt  (+4 more)
docs/: standards.md  tools.md
examples/: exampleOne.py
lib/MusicBank/: LICENSE  __init__.py  pyproject.toml  setup.py
lib/MusicBank/MusicBank/: MBAdd.py  MBCheck.py  MBCommon.py  MBDelete.py  MBList.py  MBManage.py  MBMove.py  MBRemove.py  MBRip.py  MBTree.py  MBUpdate.py  MBUser.py  MBUtil.py
lib/MusicBank/MusicBank.egg-info/: PKG-INFO  SOURCES.txt
libexec/: MBMerge.py  MBRip.py
notes/: GPG-key.txt  StartUp.py  require
(+129 files in other folders)
