[project]
name = "MusicBank"
version = "1.0.0"
license = {file = "LICENSE"}
authors = [
  { name="Josef Grosch", email="jgrosch@gmail.com" },
]


description = "Library routines for Music Bank system"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/jgrosch510/MusicBank"
Issues = "https://github.com/jgrosch510/MusicBank"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
